syntax = "proto3" ;

package primefactorcalculator ;

option go_package = "github.com/AdekunleDally/grpc-server-streaming-api/primefactorcalculator/proto" ;

message NumberRequest {  
    int64 input_number = 1;   
}

message PrimeFactorResponse {
    int64 result = 1;  
}

service PrimeFactorService{
    rpc PrimeFactorCalc(NumberRequest) returns (PrimeFactorResponse);
}